@@ -284,7 +284,7 @@ bitmap_alloc (bitmap_obstack *bit_obstack MEM_STAT_DECL)
     bit_obstack->heads = (struct bitmap_head *) map->first;
   else
     map = XOBNEW (&bit_obstack->obstack, bitmap_head);
-  bitmap_initialize_stat (map, bit_obstack PASS_MEM_STAT);
+  bitmap_initialize (map, bit_obstack PASS_MEM_STAT);
 
   if (GATHER_STATISTICS)
     register_overhead (map, sizeof (bitmap_head));
@@ -300,7 +300,7 @@ bitmap_gc_alloc (ALONE_MEM_STAT_DECL)
   bitmap map;
 
   map = ggc_alloc<bitmap_head> ();
-  bitmap_initialize_stat (map, NULL PASS_MEM_STAT);
+  bitmap_initialize (map, NULL PASS_MEM_STAT);
 
   if (GATHER_STATISTICS)
     register_overhead (map, sizeof (bitmap_head));
